--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -31,7 +31,7 @@ jobs:
       uses: actions/upload-artifact@main
       with:
         name: Artifacts
-        path: build
+        path: public/
         if-no-files-found: error
 
   test:
@@ -47,6 +47,6 @@ jobs:
         uses: actions/download-artifact@main
         with:
           name: Artifacts
-          path: .
+          path: public
       - name: Test
         run: dotnet test --no-build --verbosity normal
