--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -18,5 +18,7 @@ jobs:
         operating-system: [windows-latest]   
 
     steps:
+    - name: List Directory
+      run: Run ls -R
     - name: Publish
-      run: dotnet publish --configuration Release --no-restore --verbosity normal --output \dist ./src/FileSorter.Console/FileSorter.Console.csproj
+      run: dotnet publish --configuration Release --no-restore --verbosity normal --output \dist ../FileSorter.Console/FileSorter.Console.csproj
