--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -19,6 +19,6 @@ jobs:
 
     steps:
     - name: List Directory
-      run: Run ls -R
+      run: ls -R
     - name: Publish
       run: dotnet publish --configuration Release --no-restore --verbosity normal --output \dist ../FileSorter.Console/FileSorter.Console.csproj
