--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -1,9 +1,10 @@
+name: Create github release
+
 on:
   push:
     branches: [ "**" ]
   pull_request:
     branches: [ "**" ]
-name: github release
 
 jobs:
   build-and-unit-test:
@@ -22,7 +23,7 @@ jobs:
       run: dotnet build --configuration Release
     - name: dotnet publish
       run: |
-        dotnet publish -c Release -o FileSorter.Console
+        dotnet publish -c Release -o /FileSorter.Console
     - name: List Directory
       run: ls -R
     - name: Publish
