--- a/.github/workflows/build-and-unit-test.yml
+++ b/.github/workflows/build-and-unit-test.yml
@@ -5,47 +5,9 @@ on:
     branches: [ '**', '!main' ]
   pull_request:
     branches: [ '**', '!main' ]
-  workflow_call:
 
 jobs:
-  build:
-    runs-on: ${{ matrix.operating-system }}
-    
-    strategy:
-      matrix:
-        operating-system: [ubuntu-latest]
-        
-    steps:
-    - uses: actions/checkout@v4
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v4
-      with:
-        dotnet-version: 8.0.x
-    - name: Restore dependencies
-      run: dotnet restore
-    - name: Build
-      run: dotnet build --no-restore --configuration Release
-    - name: Upload build artifact
-      uses: actions/upload-artifact@main
-      with:
-        name: Build artifact
-        path: ./test/FileSorter.UnitTest/bin/Release/
-        if-no-files-found: error
- 
-  test:
-    runs-on: ${{ matrix.operating-system }}
-    needs: build
-    
-    strategy:
-      matrix:
-        operating-system: [ubuntu-latest, windows-latest, macos-latest]    
-
-    steps:
-      - name: Download build artifact
-        uses: actions/download-artifact@main
-        with:
-          name: Build artifact
-      - name: Test build artifact download
-        run: ls -R
-      - name: Test
-        run: dotnet test */FileSorter.UnitTest.dll --no-build --verbosity normal
+  build-and-unit-test:
+    uses: ./.github/workflows/reusable-build-and-unit-test.yml
+  cleanup-workflow-runlogs:
+    uses: ./.github/workflows/reusable-build-and-unit-test.yml
