--- a/.github/workflows/build-and-unit-test.yml
+++ b/.github/workflows/build-and-unit-test.yml
@@ -11,3 +11,5 @@ jobs:
     uses: ./.github/workflows/reusable-build-and-unit-test.yml
   cleanup-workflow-runlogs:
     uses: ./.github/workflows/reusable-github-workflow-run-cleanup.yml
+    permissions:
+      actions: write
