--- a/.github/workflows/build-and-unit-test.yml
+++ b/.github/workflows/build-and-unit-test.yml
@@ -17,8 +17,8 @@ jobs:
     steps:
       - uses: igorjs/gh-actions-clean-workflow@v4
         with:
-          runs_to_keep: 2
- 	  days_old: 0
+          days_old: "0"
+          runs_to_keep: "2"
 
   # cleanup-workflow-runlogs:
     # uses: ./.github/workflows/reusable-github-workflow-run-cleanup.yml
