--- a/.github/workflows/build-and-unit-test.yml
+++ b/.github/workflows/build-and-unit-test.yml
@@ -12,6 +12,7 @@ jobs:
 
   clean-logs:
     runs-on: ubuntu-latest
+    needs: build-and-unit-test
     permissions:
       actions: write
     steps:
