Use double quotes for ints

--- a/.github/workflows/build-and-unit-test.yml
+++ b/.github/workflows/build-and-unit-test.yml
@@ -14,5 +14,5 @@ jobs:
     permissions:
       actions: write
     with:
-      days_old: 0
-      runs_to_keep: 2
+      days_old: "0"
+      runs_to_keep: "2"
