--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -19,7 +19,7 @@ jobs:
     - name: List Directory
       run: ls -R
     - name: Publish
-      run: dotnet publish --configuration Release --no-restore --verbosity normal --output /dist ../../src/FileSorter.Console/FileSorter.Console.csproj
+      run: dotnet publish --configuration Release --no-restore --verbosity normal --output /dist FileSorter.sln
 
   # build-and-unit-test:
     # uses: ./.github/workflows/reusable-build-and-unit-test.yml
