--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -24,6 +24,6 @@ jobs:
     - name: List Directory
       run: ls -R
     - name: Publish
-      run: dotnet publish --configuration Release --no-build --verbosity normal --output /dist ../../src/FileSorter.Console.csproj
+      run: dotnet publish --configuration Release --no-build --verbosity normal --output /dist FileSorter.Console.csproj
 
 
