--- a/.github/workflows/build-and-unit-test.yml
+++ b/.github/workflows/build-and-unit-test.yml
@@ -11,6 +11,7 @@ jobs:
     uses: ./.github/workflows/reusable-build-and-unit-test.yml
   cleanup-workflow-run-logs:
     uses: ./.github/workflows/reusable-github-workflow-run-cleanup.yml
+    needs: build-and-unit-test
     permissions:
       actions: write
     with:
