--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -24,6 +24,6 @@ jobs:
     - name: List Directory
       run: ls -R
     - name: Publish
-      run: dotnet publish --configuration Release --no-build --verbosity normal --output /dist ../../../src/FileSorter.Console/FileSorter.Console.csproj
+      run: dotnet publish --configuration Release --no-build --verbosity normal --output /dist D:\a\file-sorter\file-sorter\src\FileSorter.Console\FileSorter.Console.csproj
 
 
