--- a/.github/workflows/reusable-build-and-unit-test.yml
+++ b/.github/workflows/reusable-build-and-unit-test.yml
@@ -13,7 +13,7 @@ jobs:
         
     steps:
     - name: Checkout repository
-    - uses: actions/checkout@v4
+      uses: actions/checkout@v4
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
@@ -22,6 +22,8 @@ jobs:
       run: dotnet restore
     - name: Build
       run: dotnet build --no-restore --configuration Release
+    - name: List Directory
+      run: ls -R
     - name: Upload build artifact
       uses: actions/upload-artifact@main
       with:
