--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -27,6 +27,6 @@ jobs:
     - name: Test solution artifact download
       run: ls -R
     - name: Publish
-      run: dotnet publish --configuration Release --no-build --verbosity normal --output /dist ./src/FileSorter.Console/FileSorter.Console.csproj
+      run: dotnet publish --configuration Release --verbosity normal --output /dist ./src/FileSorter.Console/FileSorter.Console.csproj
 
 
