--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -28,5 +28,7 @@ jobs:
       run: ls -R
     - name: Publish
       run: dotnet publish --configuration Release --verbosity normal --output /dist ./src/FileSorter.Console/FileSorter.Console.csproj
+    - name: Test publish
+      run: ls -R
 
 
